Add appbars in bmi_page and history_page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,5 @@
 {
-    "helloWorld": "Create your training!",
+    "helloWorld": "Create your training",
 "@helloWorld": {
     "description": "The tool to create training"
     }
